crates/sdk/tests/macros/error_non_mergeable_field.stderr
error[E0277]: (calimero)> `Plain` cannot be stored in replicated state — it is not a CRDT
  --> tests/macros/error_non_mergeable_field.rs:16:1
   |
16 | #[app::state]
   | ^^^^^^^^^^^^^ this type has no merge semantics
   |
   = help: the trait `Mergeable` is not implemented for `Plain`
   = note: every `#[app::state]` field and every collection value must be `Mergeable` so replicas converge.
   = note: fixes: wrap a plain value in `LwwRegister<Plain>` (last-write-wins) or `Counter`; use `UnorderedMap`/`UnorderedSet`/`Vector` for collections; or `#[derive(Mergeable)]` on your own struct (every field must itself be `Mergeable`).
   = help: the following other types implement trait `Mergeable`:
             AuthoredMap<K, V, S>
             AuthoredVector<V, S>
             Counter<ALLOW_DECREMENT, S>
             FrozenValue<T>
             ReplicatedGrowableArray
             S
             calimero_storage::collections::FrozenStorage<T, S>
             calimero_storage::collections::LwwRegister<T>
           and $N others
   = note: required for `calimero_storage::collections::UnorderedMap<std::string::String, Plain>` to implement `Mergeable`
   = note: this error originates in the attribute macro `app::state` (in Nightly builds, run with -Z macro-backtrace for more info)
